--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="Themescare">
     <!-- Title -->
-    <title>Not Found 404 | FAF Games</title>
+    <title>Not Found 404 | Biggig</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
