--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="Faf | Gaming HTML Template from Themescare">
+      <meta name="description" content="Biggig | Gaming HTML Template from Themescare">
       <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
       <meta name="author" content="Themescare">
       <!-- Title -->
-      <title>Contact Us | FAF Games</title>
+      <title>Contact Us | Biggig</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
